# pwlsplit

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/pwlsplit/: __main__.py  _prep.py  _types.py  _validation.py  api.py  plot.py  struct.py  trait.py  types.py
src/pwlsplit/bogoni/: __main__.py  tools.py
src/pwlsplit/curve/: _types.py  peaks.py  validator.py
src/pwlsplit/example/: __main__.py  _tools.py  _trait.py  tools.py
src/pwlsplit/segment/: refine.py  split.py
